--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
     <h1>This is {{ pageTitle }}</h1>
     <p><a href="/">home</a></p>
     <p><a href="/about">About</a></p>
+    <p><a href="/project">Project</a></p>
 </header>
